# Activity_Review

./: .gitignore  CHANGELOG.md  CargoLegacy.test.js  README.en.md  README.md  README.test.js  README.tw.md  RepoSemantic.test.js  activity_review.spec  backend_only.spec  backend_server.py  build_exe.bat  build_installer.bat  cargoToml.test.js  installer.iss  launcher.py  package-lock.json  package.json  pyproject.toml  releaseWorkflow.test.js  requirements.txt  start_activity_review.bat  stop_activity_review.bat  vite.config.js
.github/workflows/: release.yml
backend/app/: main.py
backend/app/api/: __init__.py  assistant.py  config.py  files.py  intelligence.py  reports.py  runtime.py  (+3 more)
desktop/: __init__.py  main.py  single_instance.py  tray.py  windows.py
docs/: WINDOWS_OCR.md
electron/: main.js  package-lock.json  package.json  preload.js  tray.js
scripts/: build-icons.mjs
src/: AiProviders.test.js  App.svelte  App.sync.test.js  ClientInvokeCoverage.test.js  HostSemantic.test.js  I18nLayout.test.js  I18nLocaleFlow.test.js  IdleDetectionFlow.test.js  OpenAiCompatibility.test.js  UpdaterFlow.test.js  app.css  reportSemantic.test.js
src-tauri/: Cargo.toml  linuxWaylandSupport.test.js  screenSelection.test.js  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/scripts/: patch-info-plist.sh
src-tauri/src/: activity_classifier.rs  autostart.rs  avatar_engine.rs  commands.rs  config.rs  database.rs  idle_detector.rs  linux_session.rs  main.rs  monitor.rs  screenshot.rs
src/lib/: runtime.js
src/routes/: Overview.svelte  Overview.test.js
(+71 files in other folders)
